<resources>
    <string name="app_name">The Language Lion</string>
    <string name="title_home">Home</string>
    <string name="title_notebook">Notebook</string>
    <string name="title_settings">Settings</string>
    <string name="button_practice">Practice!</string>
    <string name="score_title">Well done!\nYour score is</string>
    <string name="button_finish">Finish up</string>
    <string name="button_continue">Continue</string>
    <string name="button_dontknow">Don\'t know</string>
    <string name="button_check">Check</string>
    <string name="settings_reset">Reset progress</string>
    <string name="button_reset">Reset</string>
    <string name="settings_reset_warning">Warning! All your progress will be permanently lost. This process cannot be undone!</string>
    <string name="settings_header">Settings</string>
    <string name="notebook_header">Notebook</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_lead">Learn Dutch with the Language Lion! Enter your name to get started.</string>
    <string name="edit_name">Enter your name</string>
    <string name="button_welcome">Start</string>
    <string name="settings_debug">Debug</string>
    <string name="button_log">Log</string>
    <string name="one_minute">1 min</string>
    <string name="button_practice_5min">5 min</string>
    <string name="button_practice_10min">10 min</string>
    <string name="text_practice_picker">Choose your practice time:</string>
    <string name="dutch">Dutch</string>
    <string name="english">English</string>
    <string name="profile_one">Profile 1</string>
    <string name="profile_two">Profile 2</string>
</resources>
