<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="settingsViewModel"
            type="com.android.example.thelanguagelion.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings_header"
            android:text="@string/settings_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/heading_1" />

        <TextView
            android:id="@+id/settings_header_reset"
            android:text="@string/settings_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_header"
            style="@style/heading_2" />

        <TextView
            android:id="@+id/settings_reset_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settings_reset_warning"
            android:textColor="@color/colorMistake"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/settings_header_reset"
            app:layout_constraintTop_toBottomOf="@+id/settings_header_reset" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_reset"
            android:onClick="@{() -> settingsViewModel.resetProgress()}"
            app:layout_constraintStart_toStartOf="@+id/settings_header_reset"
            app:layout_constraintTop_toBottomOf="@+id/settings_reset_warning" />

        <TextView
            android:id="@+id/settings_header_debug"
            style="@style/heading_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/settings_debug"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_reset" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_log"
            android:onClick="@{() -> settingsViewModel.logData()}"
            app:layout_constraintStart_toStartOf="@+id/settings_header_debug"
            app:layout_constraintTop_toBottomOf="@+id/settings_header_debug" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>