<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.example.thelanguagelion.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_lesson"
            app:destination="@id/navigation_lesson"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notebook"
        android:name="com.android.example.thelanguagelion.ui.notebook.NotebookFragment"
        android:label="@string/title_notebook"
        tools:layout="@layout/fragment_notebook" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.android.example.thelanguagelion.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_lesson"
        android:name="com.android.example.thelanguagelion.ui.lesson.LessonFragment"
        android:label="LessonFragment" >
        <action
            android:id="@+id/action_navigation_lesson_to_navigation_score"
            app:destination="@id/navigation_score"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_score"
        android:name="com.android.example.thelanguagelion.ui.score.ScoreFragment"
        android:label="ScoreFragment" >
        <action
            android:id="@+id/action_navigation_score_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="score"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
</navigation>
