<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.welcome.WelcomeFragment">

    <data>
        <variable
            name="welcomeViewModel"
            type="com.android.example.thelanguagelion.ui.welcome.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_lead"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_lead"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_name"
            style="@style/edittext_orange"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/button_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_lead" />

        <Button
            android:id="@+id/button_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>