<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="notebookViewModel"
            type="com.android.example.thelanguagelion.ui.notebook.NotebookViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/notebook_header"
            style="@style/heading_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notebook_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sememe_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="48dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dutch_header" />

        <TextView
            android:id="@+id/dutch_header"
            style="@style/subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dutch"
            app:layout_constraintStart_toStartOf="@+id/notebook_header"
            app:layout_constraintTop_toBottomOf="@+id/notebook_header" />

        <TextView
            android:id="@+id/english_header"
            style="@style/subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/english"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/notebook_header" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notebook_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>